apps/grep/environments/hz/service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: grep-staging
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: grep-staging
